# uma-utils-pkg

./: CMakeLists.txt  README.md
AutoDocking_Camera/: CAutoDocking - copia.cpp  CAutoDocking - copia.h  CAutoDocking.cpp  CAutoDocking.h  CMakeLists.txt  main.cpp
AutoDocking_Laser/: CDockingApp.cpp  CDockingApp.hpp  CMakeLists.txt  main.cpp
BatteryManager/: CBatteryManager.cpp  CBatteryManager.h  CMakeLists.txt  main.cpp
LookAtPoint/: CLookAtPoint.cpp  CLookAtPoint.h  CMakeLists.txt  main.cpp
MQTTMosquitto/: CMQTTMosquitto.cpp  CMQTTMosquitto.h  CMakeLists.txt  Constants.cpp  Constants.h  main.cpp
MapCreator/: CMakeLists.txt  CMapCreator.cpp  CMapCreator.h  main.cpp
SessionLogger/: CMakeLists.txt  MOOSLogger.cpp  MOOSLogger.h
SkypeComm/: CMakeLists.txt  SkypeComm.cpp  SkypeComm.h  main.cpp
SpeechSynth/: CMakeLists.txt  CSpeechSynth.cpp  CSpeechSynth.hpp  main.cpp
TextInterpreter/: CMakeLists.txt  TextInterpreter.cpp  TextInterpreter.h  main.cpp
TwitterAgent/: CMakeLists.txt  CTwitterAgent.cpp  CTwitterAgent.hpp  main.cpp  twitterClient.cpp  twitterClient.h  twitterClient.hpp
TwitterAgent/includes/: oauthlib.h  twitcurl.h
TwitterAgent/libs/: twitcurl.lib
VoiceFestival/: CMakeLists.txt  CVoiceFestivalApp.cpp  CVoiceFestivalApp.h  README.txt  main.cpp
VoiceVerbio/: ActionsDefinitionExample(basic).ini  ArchitectureGrammar.cpp  ArchitectureGrammar.hpp  CMakeLists.txt  CVoiceApp.cpp  CVoiceApp.hpp  FileStringReader.cpp  FileStringReader.hpp  Grammar.cpp  Grammar.hpp  GrammarComponents.cpp  GrammarComponents.hpp  GrammarHandler.cpp  GrammarHandler.hpp  GrammarRules.cpp  GrammarRules.hpp  Jafma_Iostream  Jafma_Iostream.cpp  Jafma_MacroScript  Jafma_MacroScript.cpp  Jafma_String  Jafma_String.cpp  ObjectsDefinitionExample(basic).ini  TimedStringsQueue.cpp  TimedStringsQueue.hpp  VERBIO_architecture_template.jms  VoiceEngineHandler.cpp  VoiceEngineHandler.hpp  VoiceEngineHandler_Audio.cpp  VoiceManager.cpp  VoiceManager.hpp  main.cpp  test.moos
VoiceVerbio/libverbio_win/: Verbio.h  VerbioASR.h  VerbioTTS.h  verbiolib.lib  voxlib.h  voxlib.lib  voxlib_bc.lib
Wifi_KeepCoverage/: CMakeLists.txt  CWifiAlert.cpp  CWifiAlert.h  main.cpp
Wifi_Monitor/: CMakeLists.txt  CWifiWatch.cpp  CWifiWatch.h  main.cpp
