PROJECT(SessionLogger)

# Use MRPT:
FIND_PACKAGE( MRPT REQUIRED)

#find_package(MOOS 10)
INCLUDE_DIRECTORIES( ${MOOS_INCLUDE_DIRS}  )
LINK_DIRECTORIES( ${MOOS_LIBRARY_DIRS} )

FIND_PACKAGE(ZLIB QUIET)
IF (ZLIB_FOUND)
    ADD_DEFINITIONS(-DZLIB_FOUND)
    INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
    MESSAGE(STATUS "Cmake FindZLIB: using ZLIB includes at: ${ZLIB_INCLUDE_DIR}")
    MESSAGE(STATUS "Cmake FindZLIB: using ZLIB libraries: ${ZLIB_LIBRARIES}")
ELSE(ZLIB_FOUND)
    SET(ZLIB_LIBRARIES "")
ENDIF (ZLIB_FOUND)

# Add executable
ADD_EXECUTABLE( ${PROJECT_NAME}
	MOOSLogger.cpp MOOSLogger.h
	pLoggerMain.cpp 
	Zipper.cpp Zipper.h
	)
	
# Link the executable
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MOOS_LIBRARIES} ${MRPT_LIBS} ${ZLIB_LIBRARIES})


