PROJECT(SkypeComm)

# Use MRPT:
FIND_PACKAGE( MRPT REQUIRED)

# Find Python
FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

# Find Skype4Py: TODO
#GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL ${PYTHON_LIBRARY} PATH)
#GET_FILENAME_COMPONENT(PYTHON_SKYPE4PY_DIR ${PYTHON_LIB_INSTALL}/../site-packages/Skype4Py ABSOLUTE CACHE)
#file(TO_NATIVE_PATH ${SKYPE4PY_DIR} SKYPE4PY_DIR )
#message("${PYTHON_SKYPE4PY_DIR}")
#if(IS_DIRECTORY ${PYTHON_SKYPE4PY_DIR})
#message("Skype4Py found!")
#else()
#message("Skype4Py not found!")
#endif()

INCLUDE_DIRECTORIES( ${MOOS_INCLUDE_DIRS}  )
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
LINK_DIRECTORIES( ${MOOS_LIBRARY_DIRS} )

# Add executable
ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
	SkypeComm.h SkypeComm.cpp
	)

# Link the executable
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MOOS_LIBRARIES} ${MRPT_LIBS} ${PYTHON_LIBRARIES})

